--- a/index.html
+++ b/index.html
@@ -50,6 +50,36 @@
             </div>
         </section>
     </header>
-    
+    <section id="item">
+        <div class="item-container">
+            <div class="item-content">
+                <h1>Notes don't fail, Structure does.</h1>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+            <div class="item-card">
+                <div class="item-info">
+                    <div class="image"><img src="assets/Vector.png" alt="vector"></div>
+                    <h4>Scattered notes</h4>
+                    <p>Your ideas live in 10 different apps, <br> none of them connected.</p>
+                </div>
+                <div class="item-info">
+                    <div class="image"><img src="assets/Bookmarks.png" alt="bookmark"></div>
+                    <h4>Bookmark overload</h4>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="item-info">
+                   <div class="image"><img src="assets/Brain.png" alt="brain"></div>
+                    <h4>No idea connections</h4>
+                    <p>Insights stay isolated, never <br> building into bigger understanding.</p>
+                </div>
+                <div class="item-info">
+                  <div class="image"><img src="assets/Info.png" alt="info"></div>
+                    <h4>Forgetting what <br>you learned</h4>
+                    <p>Knowledge fades because there's <br> no system to retain it.</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
