--- a/index.html
+++ b/index.html
@@ -81,5 +81,24 @@
             </div>
         </div>
     </section>
+    <section id="brain">
+        <div class="brain-container">
+            <div class="brain-banner">
+                <img src="assets/knowledge.png" alt="brain">
+            </div>
+            <div class="brain-content">
+                <p class="p1">THE SOLUTION</p>
+                <h1>Your second brain,<br>Structured by design.</h1>
+                <p class="p2">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking environment where every note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
+                <ul class="brain-list">
+                    <li>Capture ideas with structure built-in from day one</li>
+                    <li>Connect related concepts automatically as you write</li>
+                    <li>Build lasting knowledge through reflection prompts</li>
+                    <li>Find anything instantly with semantic search</li>
+                </ul>
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
