--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>knowledge Vault</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <link rel="stylesheet" href="styles/knowledge.css">
 </head>
 <body class="font-inter">
@@ -42,8 +43,8 @@
                    <p>A private space to store notes, links, and learning summaries — designed to<br> help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 
                 <div class="hero-button">
-                    <button class="primary-btn">Start Building Your Vault</button>
-                    <button class="secondary-btn">See How It Works</button>
+                    <button class="primary-btn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+                    <button class="secondary-btn"><i class="fa-solid fa-play"></i> See How It Works</button>
                 </div>
                 </div>
 
@@ -100,5 +101,32 @@
             </div>
         </div>
     </section>
+    <section id="problem">
+        <div class="problem-container">
+            <h1>Ready to think more clearly?</h1>
+            <p class="p3">Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+            <button class="problem-btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
+            <p class="p4">Free during early access • No credit card needed</p>
+        </div>
+    </section>
+    <footer id="last" >
+        <div class="foot-logo">
+            <img src="assets/logo-footer.png" alt="footerlogo">
+            <div class="foot-content">
+                <p>Social Links</p>
+                <ul class="social-list">
+                    <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="foot-end">
+            <hr class="line">
+            <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+
+        </div>
+    </footer>
 </body>
 </html>
